Updated Map and Fixed Alignment

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1357,7 +1357,7 @@ pre code {
   }
 
   .col-md-3 {
-    width: 25%;
+    width: 24.4%;
   }
 
   .col-md-4 {
